UMS integration